<resources>
    <string name="app_name">Wealth Watch</string>

    <string name="LoginHeading">Login</string>
    <string name="RegisterHeading01">Create new</string>
    <string name="RegisterHeading02">Account</string>
    <string name="user_profile">User Profile</string>


    <!--   expenses string values-->
    <string name="add_expense">Add Expense</string>
    <string name="expense_description">Expense Description</string>
    <string name="expense_amount">Expense Amount</string>
    <string name="expense_date">Expense Date</string>
    <string name="expense_time">Expense Time</string>
    <string name="save_expense">Save Expense</string>
    <string name="NameExp">Name</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="update_expense">Update Expense</string>
    <string name="description">Description</string>
    <string name="amountUpdateExp">Amount</string>
    <string name="addExpense">Add Expense</string>
    <string name="total_expenses_for_current_month">Total Expenses for this Month: Rs.</string>
    <string name="view_expenses">View Expenses</string>
    <!--    income string values-->
    <string name="add_income">Add Income</string>
    <string name="income_description">Income Description</string>
    <string name="income_amount">Income Amount</string>
    <string name="income_date">Income Date</string>
    <string name="income_time">Income Time</string>
    <string name="save_income">Save Income</string>
    <string name="add_income_dashboard">Add Income</string>
    <string name="name">Name</string>
    <string name="dateincome">Date</string>
    <string name="amountincome">Amount</string>
    <string name="deleteincome">Delete</string>
    <string name="editincome">Edit</string>
    <string name="update_income">Update Income</string>
    <string name="description_income">Description</string>
    <string name="amount_income">Amount</string>
    <string name="total_incomes_for_current_month">Total Incomes for this Month: Rs.</string>
    <string name="view_income">View Income</string>


    <!--    goals stings -->
    <string name="Create">Create a new goal</string>
    <string name="view">view goals</string>
    <string name="Analytics">Analytics</string>
    <string name="add_expenses_dashboard">Add expenses</string>


    <!--menue bar-->
    <string name="dasboard">Dasboard</string>
    <string name="goals">Goals</string>
    <string name="stats">Stats</string>
    <string name="settings">Settings</string>

</resources>