<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:background="@drawable/expensebg"
    android:padding="16dp">

    <TextView
        android:id="@+id/name"
        android:layout_width="240dp"
        android:layout_height="27dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/NameExp"
        android:textSize="18sp"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.21" />

    <TextView
        android:id="@+id/amount"
        android:layout_width="102dp"
        android:layout_height="25dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/amount"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toEndOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.192" />

    <TextView
        android:id="@+id/date"
        android:layout_width="146dp"
        android:layout_height="35dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/date"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#0583F2"
        android:text="@string/delete"
        android:textStyle="bold"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/edit_button"
        app:layout_constraintHorizontal_bias="0.676"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toBottomOf="@+id/amount"
        app:layout_constraintVertical_bias="0.058" />

    <Button
        android:id="@+id/edit_button"
        android:layout_width="74dp"
        android:layout_height="wrap_content"
        android:backgroundTint="#0583F2"
        android:text="@string/edit"
        android:textStyle="bold"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.971"
        app:layout_constraintStart_toEndOf="@+id/date"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.971" />
    


</androidx.constraintlayout.widget.ConstraintLayout>
