<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/expensebg"
    tools:context=".AddIncomesActivity">

    <TextView
        android:id="@+id/addIncomeTitle"
        android:layout_width="285dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/add_income"
        android:textColor="@color/buttonblue"
        android:textSize="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.111" />

    <EditText
        android:id="@+id/incomeNameInput"
        android:layout_width="379dp"
        android:layout_height="58dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/income_description"
        android:radius="18dp"
        android:inputType="text"
        android:paddingLeft="20dp"
        android:background="@drawable/edittextboarder"
        android:textColorHint="#0583F2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.28" />

    <EditText
        android:id="@+id/incomeAmountInput"
        android:layout_width="379dp"
        android:layout_height="58dp"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/income_amount"
        android:paddingLeft="20dp"
        android:inputType="numberDecimal"
        android:textColorHint="#0583F2"
        android:background="@drawable/edittextboarder"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.545" />

    <EditText
        android:id="@+id/incomeDateInput"
        android:layout_width="379dp"
        android:layout_height="58dp"
        android:editable="true"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/income_date"
        android:paddingLeft="20dp"
        android:inputType="none"
        android:textColorHint="#0583F2"
        android:textStyle="bold"
        android:background="@drawable/edittextboarder"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.42" />

    <EditText
        android:id="@+id/incomeTimeInput"
        android:layout_width="379dp"
        android:layout_height="58dp"
        android:editable="true"
        android:fontFamily="@font/poppins_medium"
        android:hint="@string/income_time"
        android:inputType="none"
        android:paddingLeft="20dp"
        android:background="@drawable/edittextboarder"
        android:textColorHint="#0583F2"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.682" />

    <Button
        android:id="@+id/saveIncomeButton"
        android:layout_width="259dp"
        android:layout_height="53dp"
        android:backgroundTint="#0583F2"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/save_income"
        android:textStyle="bold"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.849" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:layout_width="403dp"
        android:layout_height="55dp"
        android:id="@+id/navbar"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu"
        app:itemTextColor="@drawable/sssss"
        app:itemIconTint="@drawable/sssss"
        tools:ignore="MissingConstraints">


    </com.google.android.material.bottomnavigation.BottomNavigationView>

</androidx.constraintlayout.widget.ConstraintLayout>
