<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dashboardbg"
    tools:context=".MainActivity">


    <Button

        android:id="@+id/viewExpenses"
        android:layout_width="259dp"
        android:layout_height="53dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#0583F2"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/view_expenses"
        android:textSize="18dp"
        android:textStyle="bold"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.794">

    </Button>

    <Button

        android:id="@+id/addExpenseButton"
        android:layout_width="259dp"
        android:layout_height="53dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#0583F2"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/add_expenses"
        android:textSize="18dp"
        android:textStyle="bold"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.52">

    </Button>

    <Button

        android:id="@+id/addIncomeButton"
        android:layout_width="259dp"
        android:layout_height="53dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#0583F2"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/add_income"
        android:textSize="18dp"
        android:textStyle="bold"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.383">

    </Button>

    <Button

        android:id="@+id/viewIncomes"
        android:layout_width="259dp"
        android:layout_height="53dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#0583F2"
        app:cornerRadius="70dp"
        android:fontFamily="@font/poppins_medium"
        android:textStyle="bold"
        android:textSize="18dp"
        android:gravity="center"
        android:text="@string/view_income"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.662">

    </Button>

    <Button

        android:id="@+id/UserProfile"
        android:layout_width="259dp"
        android:layout_height="53dp"
        android:layout_centerHorizontal="true"
        android:backgroundTint="#0583F2"
        android:fontFamily="@font/poppins_medium"
        android:gravity="center"
        android:text="@string/user_profile"
        android:textSize="18dp"
        android:textStyle="bold"
        app:cornerRadius="70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.23">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>
